--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,7 +12,8 @@
 
 /* 4. WRAPPER-CONTENT */
 /* ============================================================================================================== */
-@import "layout/wrapper.scss";
+@import "layout/main";
+@import "layout/auth";
 
 /* 5. MORE-FILES */
 /* ============================================================================================================== */
